refactor: `Coupon` 이름 내 검증에 isEmpty 대신 isBlank 사용